# scanpw

./: Cargo.toml  README.md
examples/: basic.rs  prompt.rs  prompt_args.rs  prompt_no_echo.rs
src/: lib.rs  try_scanpw.rs
